src/main/java/com/example/githubrepos/api/error/excetion/BadContentTypeException.java
package com.example.githubrepos.api.error.excetion;

public class BadContentTypeException extends RuntimeException {
    public BadContentTypeException(String message) {
        super(message);
    }
}
